# RightsGuard

./: .gitignore  BROWSER_CONNECTION_TEST.md  CLAUDE.local.md  CLAUDE.md  FILE_UPLOAD_FIX.md  README_DESKTOP.md  automation.txt  gemini.md  next.config.ts  package-lock.json  package.json  playwright.config.js  temp_connect_script.spec.js  test_browser.js  test_browser_connection.spec.js  test_chrome_command.js  test_fix_verification.md  test_tauri_environment.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup  temp_connect_script.spec.js
src-tauri/src/: automation.rs  commands.rs  commands_old.rs  database.rs  main.rs  models.rs
src/app/: page.tsx
src/components/: sidebar.tsx
src/components/pages/: dashboard.tsx  ip-assets.tsx  profile.tsx  settings.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-tauri.ts
src/lib/: tauri-api.ts
src/types/: tauri.d.ts
test-results/: .last-run.json
tests/: example.spec.js  temp_connect_script.spec.js
