[package]
name = "rights-guard"
version = "1.0.0"
description = "B站版权侵权自动化申诉工具"
authors = ["RightsGuard Team"]
edition = "2021"

[[bin]]
name = "rights-guard"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
playwright = "0.0.20"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
